Fixed menu not scaling correctly for many levels. Fixed biglabel not being visible on white wall.

--- a/web/styles.css
+++ b/web/styles.css
@@ -69,26 +69,30 @@ main.active {
 header {
   position: absolute;
   display: block;
-  top: 25%;
-  width: 100%;
+  top: calc(25vh);
+  width: 100vw;
   height: auto;
   text-align: center;
   text-transform: capitalize;
   color: #cccccc;
   font-size: 40px;
   line-height: 40px;
+  padding: 10px 0;
   transform: translate(0%, -100%);
 }
 
 nav {
   display: flex;
   position: absolute;
+  box-sizing: border-box;
   left: 0;
-  top: 25%;
-  width: 100%;
-  height: 50%;
+  top: 0;
+  padding-top: 26vh;
+  width: 100vw;
+  height: 100vh;
   flex-direction: column;
-  justify-content: center;
+  justify-content: top;
+  overflow-y: auto;
   align-items: center;
   opacity: 0;
   transition: opacity 0.5s;
@@ -109,15 +113,16 @@ nav > button {
   text-transform: capitalize;
   text-align: center;
   padding: 25px;
-  background-color: transparent;
+  background-color: #000000;
   border: none;
   outline: none;
   transition: background-color 0.2s;
   width: 100%;
+  min-height: min-content;
 }
 
 nav > button:hover, nav > button:focus {
-  background-color: rgba(255,255,255,0.1);
+  background-color: rgb(50,50,50);
   cursor: pointer;
 }
 
@@ -158,6 +163,7 @@ nav > button.active > .checkbox > i {
   opacity: 0;
   transition: opacity ease 0.3s;
   pointer-events: none;
+  text-shadow: 2px 2px 4px #333333;
 }
 
 #bigLabel.active {
